--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -3,6 +3,7 @@ body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    overflow-x: hidden;
     /* background-color: #f9f7f0; */
 }
 
@@ -16,6 +17,7 @@ code {
     display: flex;
     min-height: 100vh;
     flex-direction: column;
+    overflow-x: hidden;
 }
 
 .content {
@@ -23,6 +25,9 @@ code {
     flex: 1;
     padding: 20px;
     margin-top: 32px;
+    max-width: 100%;
+    box-sizing: border-box;
+    overflow-x: hidden;
 }
 
 img {
